# HellbenderEngine

./: .gitignore  .gitmodules  Application.cpp  Application.h  BUILD.MD  CMakeLists.txt  CommitUtilsSubmodule.bat  Configs.cpp  Configs.h  Core.h  HBE.h  HBETypes.h  LICENSE  LICENSE.md  README.md  UpdateSubmodules.bat  UpdateSubmodules.sh  main.cpp
Games/Pong/: CMakeLists.txt  FPSCounter.h  PongGame.cpp  PongGame.h  PongGameScene.cpp  PongGameScene.h  PongUIScene.cpp  PongUIScene.cpp~  PongUIScene.h  main.cpp
Games/Pong/Systems/: BallSystem.cpp  BallSystem.h  PaddleSystem.cpp  PaddleSystem.h
Games/PongLockstep/: CMakeLists.txt  FPSCounter.h  PongGame.cpp  PongGame.h  PongGameScene.cpp  PongGameScene.h  PongUIScene.cpp  PongUIScene.h  main.cpp
Games/PongLockstep/Dependencies/enet/: CMakeLists.txt
Games/PongLockstep/Dependencies/fpm/: CMakeLists.txt
Games/PongLockstep/Simulation/: Client.cpp  Client.h  Commands.h  PongServer.cpp  PongServer.h  Server.cpp  Server.h  fixed.h
Games/PongLockstep/Systems/: BallSystem.cpp  BallSystem.h  PaddleSystem.cpp  PaddleSystem.h
Games/Raytracer/: CMakeLists.txt  RaytracingScene.h  main.cpp
HBE/: Application.cpp  Application.h  CMakeLists.txt  CompilationConfigs.h  Configs.cpp  Configs.h  Core.h  Core.h~  HBE.cpp  HBE.h  HBETypes.h  RuntimeConfigs.h  main.cpp
HBE/core/: Core.h  HBE.cpp  HBE.h  Tester.cpp  Tester.h
HBE/core/audio/: Audio.cpp
HBE/core/ecs/: ECSScene.h
HBE/core/ecs/component/: Identity.h  Transform.h
HBE/core/ecs/system/: System.cpp  System.h  TransformSystem.cpp  TransformSystem.h
HBE/core/entity/: Entity.cpp  Entity.h  Scene.cpp  Scene.h  Transform.cpp  Transform.h
HBE/core/entity/component/: Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  Component.cpp  Component.h  InstancesRenderer.cpp  InstancesRenderer.h  MeshRenderer.cpp  MeshRenderer.h  ModelRenderer.cpp  ModelRenderer.h  Transform.cpp  Transform.h
HBE/core/graphics/: DrawFlags.h  Framebuffer.cpp  Framebuffer.h  Graphics.cpp  Graphics.h  Graphics.h~  IRenderer.h  Layer.cpp  RenderGraph.cpp  RenderGraph.h  RenderTarget.cpp  RenderTarget.h  Renderer.cpp  Renderer.h  Window.cpp  Window.h
HBE/core/input/: Input.cpp  Input.h
HBE/core/math/: Plane.h  fixed.h
HBE/core/resource/: AudioClip.h  AudioClipInstance.cpp  ComputeInstance.h  ComputePipeline.h  ComputeShader.cpp  ComputeShader.h  Font.cpp  Font.h  Framebuffer.h  GLSL_TYPE.h  GraphicPipeline.cpp  GraphicPipeline.h  GraphicPipelineInstance.h  IComputePipeline.h  IGraphicPipeline.h  IMesh.h  IPipelineInstance.h  IResourceFactory.h  IShader.h  ITexture.h  Image.cpp  Image.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshLayout.cpp  MeshLayout.h  Model.cpp  Model.h  RenderTarget.h  Resource.cpp  Resource.h  ResourceFactory.h  Resources.cpp  Resources.h  ResourcesRegistry.cpp  ResourcesRegistry.h  Shader.cpp  Shader.h  (+10 more)
HBE/core/resource/raytracing/: AccelerationStructure.h  RaytracingMaterial.h  RaytracingPipeline.h  (+1 more)
HBE/core/scene/: Components.cpp  Components.cpp~  Components.h  Entity.cpp  Entity.h  EntityGroup.h  Scene.cpp  Scene.h  System.h
HBE/core/scripting/: LuaDeserializer.cpp  LuaDeserializer.h  LuaSerializer.cpp  LuaSerializer.h  ScriptManager.cpp  ScriptManager.h
HBE/core/serialization/: ClassRegistry.cpp  ClassRegistry.h  ComponentRegistry.cpp  ComponentRegistry.h  Deserializer.cpp  Deserializer.h  LuaDeserializer.cpp  LuaDeserializer.h  LuaSerializer.cpp  LuaSerializer.h  Serializable.h  Serializer.cpp  Serializer.h
HBE/core/threading/: Job.h  JobManager.cpp  JobManager.h
HBE/core/utility/: CArray.h  Clock.cpp  Clock.h  Event.h  Function.h  GLTFLoader.cpp  GLTFLoader.h  Geometry.cpp  Geometry.h  Job.cpp  Job.h  JobManager.cpp  JobManager.h  Log.cpp  Log.h  ModelImporter.cpp  ModelImporter.h  Noise.h  Profiler.cpp  Profiler.h  Random.cpp  Random.h  RawVector.h
HBE/dependencies/RayTracingDenoiser/: 2-Build.bat  README.md
HBE/dependencies/assimp/: CMakeLists.txt
HBE/dependencies/glad/: CMakeLists.txt
HBE/dependencies/glfw/: CMakeLists.txt  glfw3.lib
HBE/dependencies/glm/: manual.md
HBE/dependencies/glslang/: CMakeLists.txt
HBE/dependencies/imgui/: imconfig.h
HBE/dependencies/lua/: CMakeLists.txt
HBE/dependencies/msdf-atlas-gen/: CMakeLists.txt
HBE/dependencies/spirv-cross/: CMakeLists.txt  spirv_cross.hpp
HBE/dependencies/stb/: CMakeLists.txt
HBE/graphics/gl/: GL_Core.h  GL_Framebuffer.h  GL_Mesh.cpp  GL_MultisamplingFramebuffer.cpp  GL_MultisamplingFramebuffer.h  GL_Renderer.cpp  GL_Renderer.h  GL_ShaderProgram.cpp  GL_ShaderProgram.h  GL_Texture.h
HBE/scripting/: Script.cpp  Script.h  ScriptManager.cpp  ScriptManager.h  Serializer.cpp  Serializer.h
HellbenderPlayground/: CMakeLists.txt  main.cpp
HellbenderPlayground/Examples/: CubeRendering.h  CubeScene.h  FPSCounter.h  FontRendering.h  Instancing.h  LoadModel.h  MeshRendering.h  ModelScene.h  OrderedRenderingScene.h  Raytracing.h  RaytracingScene.h  TextScene.h  TriangleScene.h
HellbenderPlayground/Games/Pong/: PongConstants.h  PongGame.cpp  PongGame.h  PongGameScene.cpp  PongGameScene.h  PongUIScene.cpp  PongUIScene.h
HellbenderPlayground/Pathfinder/: AgentSystem.cpp  AgentSystem.h  Map.cpp  Map.h  Navmesh.cpp  Navmesh.h  Pathfinder.h  PlayerInputSystem.cpp  PlayerInputSystem.h  SimTransform.h
HellbenderPlayground/Pathfinder/Systems/: AgentSystem.cpp  AgentSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  SimCamera2DSystem.cpp  SimCamera2DSystem.h  SimTransformSystem.h
HellbenderPlayground/Pong/: Pong.h
HellbenderPlayground/Raytracer/: Raytracer.h  TracedRendererSystem.cpp  TracedRendererSystem.h
HellbenderPlayground/Raytracing/: RaytracingExemple.cpp  RaytracingExemple.cpp~  RaytracingExemple.h
HellbenderPlayground/VoxelModule/: Octree.cpp  Octree.h  Raytracer.h  Server.cpp  Server.h  VoxTree.h  VoxelChunk.cpp  VoxelChunk.h  VoxelModule.h  VoxelRendererSystem.cpp  VoxelRendererSystem.h
HellbenderPlayground/src/: Game.cpp  Game.h
dependencies/imgui/: CMakeLists.txt
dependencies/imgui/backends/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h
src/: Core.h  (+4 more)
(+473 files in other folders)
